On clicking movie description of movie appears without videos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Movies App</string>
+    <string name="title_activity_now_playing_movie_details">NowPlayingMovieDetails</string>
 </resources>
