Feature of seeing trailer and other videos added in full screen mode

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Movies App</string>
     <string name="title_activity_now_playing_movie_details">NowPlayingMovieDetails</string>
+
+    <string name="title_activity_video_playing">VideoPlaying</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
